--- a/desktop/package.json
+++ b/desktop/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "electron": "^1.8.4",
     "electron-tooltip": "^1.1.5"
+  },
+  "dependencies": {
+    "split.js": "^1.3.5"
   }
 }
