--- a/desktop/package.json
+++ b/desktop/package.json
@@ -9,8 +9,7 @@
   "author": "Richard Wong",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^1.8.6",
-    "electron-tooltip": "^1.1.5"
+    "electron": "^1.8.6"
   },
   "dependencies": {
     "split.js": "^1.3.5"
