--- a/desktop/package.json
+++ b/desktop/package.json
@@ -12,6 +12,8 @@
     "electron": "^1.8.6"
   },
   "dependencies": {
+    "clipboardy": "^1.2.3",
+    "googleapis": "^27.0.0",
     "split.js": "^1.3.5"
   }
 }
