--- a/desktop/package.json
+++ b/desktop/package.json
@@ -37,6 +37,7 @@
     "electron-builder": "^20.13.3"
   },
   "dependencies": {
+    "avatar-initials": "^3.0.2",
     "clipboardy": "^1.2.3",
     "googleapis": "^27.0.0",
     "split.js": "^1.3.5"
